--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0"
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
